--- a/app/src/main/res/layout/activity_appointment_type_spinner.xml
+++ b/app/src/main/res/layout/activity_appointment_type_spinner.xml
@@ -5,16 +5,45 @@
     android:orientation="vertical"
     tools:context="ie.teamchile.smartapp.activities.AppointmentTypeSpinnerActivity" >
 
+    <TextView
+        android:id="@+id/tv_appointment_type"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Appointment Type"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_grey"/>
     <Spinner
         android:id="@+id/spnr_appointment_type"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:entries="@array/appointment_type_list" />
 
+    <TextView
+        android:id="@+id/tv_service_option"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Service Option"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_grey"/>
+
     <Spinner
         android:id="@+id/spnr_service_option"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_visit_option"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Visit Option"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_grey"/>
 
     <Spinner
         android:id="@+id/spnr_visit_option"
@@ -22,15 +51,45 @@
         android:layout_height="wrap_content"
         android:entries="@array/visit_service_option" />
 
+    <TextView
+        android:id="@+id/tv_clinic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Clinic"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_grey"/>
+
     <Spinner
         android:id="@+id/spnr_clinic"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
 
+    <TextView
+        android:id="@+id/tv_day"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Day"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_grey"/>
+
     <Spinner
         android:id="@+id/spnr_day"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" />
+
+    <TextView
+        android:id="@+id/tv_week"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Week"
+        android:paddingTop="@dimen/padding_small"
+        android:paddingLeft="@dimen/padding_Xsmall"
+        android:textSize="@dimen/text_small"
+        android:textColor="@color/light_grey"/>
 
     <Spinner
         android:id="@+id/spnr_week"
