--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="padding_Xlarge">36dp</dimen>
 
     <!-- TEXT SIZE -->
+    <dimen name="text_x_x_small">13sp</dimen>
     <dimen name="text_Xsmall">18sp</dimen>
     <dimen name="text_small">20sp</dimen>
     <dimen name="text_medium">23sp</dimen>
