change position of quick info header in service user

--- a/app/src/main/res/layout/activity_create_appointment.xml
+++ b/app/src/main/res/layout/activity_create_appointment.xml
@@ -128,6 +128,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/padding_Xsmall"
             android:layout_marginBottom="@dimen/padding_Xsmall"
+            android:textSize="@dimen/text_medium"
             android:background="@color/lightBlue"
             android:text="@string/confirm_appointment" />
     </LinearLayout>
