--- a/app/src/main/res/layout/activity_post_natal.xml
+++ b/app/src/main/res/layout/activity_post_natal.xml
@@ -18,10 +18,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="@string/mother_info"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
                 android:textSize="@dimen/text_small"
-                android:textStyle="bold"
-                android:background="@color/very_light_grey"/>
+                android:paddingBottom="@dimen/padding_Xsmall"
+                android:paddingTop="@dimen/padding_Xsmall"/>
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -140,10 +140,10 @@
                 android:layout_height="wrap_content"
                 android:gravity="start"
                 android:text="@string/baby_info"
-                android:textAppearance="?android:attr/textAppearanceLarge"
+                android:textColor="@color/grey"
                 android:textSize="@dimen/text_small"
-                android:textStyle="bold"
-                android:background="@color/very_light_grey" />
+                android:paddingBottom="@dimen/padding_Xsmall"
+                android:paddingTop="@dimen/padding_Xsmall"/>
 
             <TableRow
                 android:layout_width="fill_parent"
