--- a/app/src/main/res/layout/activity_service_user_tabhost.xml
+++ b/app/src/main/res/layout/activity_service_user_tabhost.xml
@@ -1,51 +1,115 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical" >
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/very_light_grey"
+        android:gravity="center"
+        android:orientation="vertical"
+        android:paddingBottom="@dimen/padding_Xsmall"
+        android:paddingTop="@dimen/padding_Xsmall">
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="Age: "
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_small"/>
+
+            <TextView
+                android:id="@+id/tv_usr_age"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="@dimen/text_small"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text=", P: "
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_small"/>
+
+            <TextView
+                android:id="@+id/tv_usr_partiy"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="@dimen/text_small"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text=", G: "
+                android:textColor="@color/grey"
+                android:textSize="@dimen/text_small"/>
+
+            <TextView
+                android:id="@+id/tv_usr_gestation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textSize="@dimen/text_small"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <TabHost
         android:id="@android:id/tabhost"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="vertical">
 
             <TabWidget
                 android:id="@android:id/tabs"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content" >
+                android:layout_height="wrap_content">
             </TabWidget>
 
             <FrameLayout
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" >
+                android:layout_height="match_parent">
 
                 <LinearLayout
                     android:id="@+id/tab_ante"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:orientation="horizontal" >
+                    android:orientation="horizontal">
+
                     <include layout="@layout/activity_ante_natal"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/tab_contact"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" 
+                    android:layout_height="match_parent"
                     android:orientation="horizontal">
+
                     <include layout="@layout/activity_service_user"/>
                 </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/tab_post"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent" 
+                    android:layout_height="match_parent"
                     android:orientation="horizontal">
+
                     <include layout="@layout/activity_post_natal"/>
                 </LinearLayout>
             </FrameLayout>
