--- a/app/src/main/res/layout/activity_post_natal.xml
+++ b/app/src/main/res/layout/activity_post_natal.xml
@@ -21,7 +21,8 @@
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_small"
                 android:paddingBottom="@dimen/padding_Xsmall"
-                android:paddingTop="@dimen/padding_Xsmall"/>
+                android:paddingTop="@dimen/padding_Xsmall"
+                android:background="@color/very_light_grey"/>
 
             <TableRow
                 android:layout_width="fill_parent"
@@ -142,6 +143,7 @@
                 android:text="@string/baby_info"
                 android:textColor="@color/grey"
                 android:textSize="@dimen/text_small"
+                android:background="@color/very_light_grey"
                 android:paddingBottom="@dimen/padding_Xsmall"
                 android:paddingTop="@dimen/padding_Xsmall"/>
 
