--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,6 @@
 <resources>
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <item name="colorPrimary">@color/clinical_blue</item>
     </style>
 
     <style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
@@ -10,5 +9,23 @@
 
     <style name="spinner_style" >
         <item name="android:background">@drawable/spinner_bg</item>
+    </style>
+
+   <style name="CallToActionButton" parent="AppTheme">
+       <item name="colorButtonNormal">@color/action_button</item>
+       <item name="android:textColor">@color/white</item>
+       <item name="android:textSize">@dimen/text_medium</item>
+       <item name="android:paddingTop">@dimen/padding_small</item>
+       <item name="android:paddingBottom">@dimen/padding_small</item>
+    </style>
+
+    <style name="SecondaryButton" parent="AppTheme">
+        <item name="colorButtonNormal">@color/very_light_grey</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="TertiaryButton" parent="AppTheme">
+        <item name="colorButtonNormal">@color/red</item>
+        <item name="android:textColor">@color/green</item>
     </style>
 </resources>
