--- a/app/src/main/res/layout/activity_quick_menu.xml
+++ b/app/src/main/res/layout/activity_quick_menu.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    style="?android:attr/buttonBarStyle"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:weightSum="4.0">
+              xmlns:app="http://schemas.android.com/apk/res-auto"
+              style="?android:attr/buttonBarStyle"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:weightSum="4.0">
 
     <Button
         android:id="@+id/btn_patient_search"
